# PitchBot

./: .env  .gitignore  README.md  basic_scraping_results.json  cluely_comhome_key_points.json  cluely_results.json  example_document_key_points.json  example_usage.py  extract_html_to_json.py  extract_to_json.py  hackathon_grading_system.py  mock_validation_demo.py  pitch_analysis_history.json  process_video.py  pyproject.toml  requirements.txt  scrape_website.py  test_audio_processor.py  test_cluely_scraper.py  test_enhanced_extraction.py  test_example.html  test_reference_extraction.py  test_rubric_scoring.py  test_scraper_simple.py  validate_repo.py  validation_results.json
agentic_search/: __init__.py  config.py  enhanced_research_pipeline.py  query_generator.py  research_analyzer.py  test_brave_search.py  test_query_generator.py
examples/: __init__.py  website_scraper_example.py
outputs/: batch_scraping_results.json  cluely_com_scraping_results.json  cluely_demo_results.json  custom_scraping_results.json  test_example_key_points.json
pitchbot/: __init__.py  __main__.py  company_url_processor.py  main.py  pdf_processor.py  url_processor.py  video_processor.py  website_scraper.py
pitchbot/agentic_search/: brave_search.py  reference_extractor.py  research_analyzer.py  test_query_generator.py
pitchbot/audio_processor/: __init__.py  config.py  processor.py  summarizer.py  transcriber.py
pitchbot/code_analyzer_agent/: __init__.py  agent.py  cli.py  file_utils.py  llama_client.py
tests/: __init__.py  test_website_scraper.py
utils/: rubric_scoring.py
(+5 files in other folders)
